[brief] Remove support for macOS.
[detailed]
- In hindsight, the overhead of supporting Apple is going to be really
  high and I don't have the time (or inclination) to support it.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,11 @@ project(zeus VERSION 1.5.0 LANGUAGES CXX C)
 
 set_property(GLOBAL PROPERTY USE_FOLDERS ON)
 
+# Don't allow builds for Apple.
+if (APPLE)
+    message(ERROR "Zeus does not support Apple platforms")
+endif()
+
 # Generate compilation database on all Unix systems
 if (NOT MSVC)
     set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
