[brief] Trying to fix the publishing step.
[detailed]
- [skip ci]

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -105,18 +105,11 @@ jobs:
         working-directory: ./install
         env:
           CONFIG_TYPE: ${{ matrix.config.preset }}
-
         run: |
-          if [[ "$OSTYPE" == "msys" ]]; then
-            7z a zeus-$CONFIG_TYPE-x64.zip -r zeus
-          else
-            tar cfv - zeus -P | zstd > zeus-$CONFIG_TYPE-x64.tar.zst
-          fi
+          tar cfv - zeus -P | zstd > zeus-$CONFIG_TYPE-x64.tar.zst
 
       - name: Publish
         uses: softprops/action-gh-release@v2
         with:
           draft: true
-          files: |
-            "./install/*.tar.zst"
-            "./install/*.zip"
+          files: "./install/*.tar.zst"
