[brief] Ensure uv is synced even if cache exists.
[detailed]

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -55,6 +55,11 @@ jobs:
           path: ~/deps
           key: deps_${{ matrix.config.os }}_${{ matrix.build }}_${{ hashfiles('dependencies.txt') }}
 
+      - name: Install Python packages
+        shell: bash
+        run: |
+          uv sync
+
       - name: Build dependencies
         if: steps.cache-deps.outputs.cache-hit != 'true'
         shell: bash
