[brief] Add a header for identifying C++ versions.
[detailed]
- This is mainly a prelude to allowing C++23 while ensuring that MSVC
  doesn't break because they haven't make a C++23 flag.

--- a/include/zeus/CMakeLists.txt
+++ b/include/zeus/CMakeLists.txt
@@ -33,6 +33,9 @@ target_include_directories(zeus INTERFACE
     $<BUILD_INTERFACE:${ZEUS_SOURCE_ROOT}>
     $<INSTALL_INTERFACE:include>)
 target_link_libraries(zeus INTERFACE fmt::fmt magic_enum::magic_enum)
+if (MSVC)
+    target_compile_options(zeus INTERFACE /Zc:__cplusplus)
+endif()
 if (NOT MSVC AND NOT APPLE)
     target_link_libraries(zeus INTERFACE stdc++fs)
 endif()
