--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,11 +33,12 @@ jobs:
       fail-fast: false
       matrix:
         config:
-          - {os: "windows-latest", cxx: "msvc", cc: "msvc", preset: "msvc"}
+          - {os: "windows-2025", cxx: "msvc", cc: "msvc", preset: "msvc"}
           - {os: "ubuntu-24.04", cxx: "clang++-18", cc: "clang-18", preset: "clang"}
           - {os: "ubuntu-24.04", cxx: "g++-14", cc: "gcc-14", preset: "gcc"}
           - {os: "macos-13", cxx: "clang++", cc: "clang", preset: "apple"}
-          - {os: "macos-latest", cxx: "clang++", cc: "clang", preset: "apple"}
+          - {os: "macos-14", cxx: "clang++", cc: "clang", preset: "apple"}
+          - {os: "macos-15", cxx: "clang++", cc: "clang", preset: "apple"}
         build: ["Debug", "Release"]
     steps:
       - name: Chekout
