--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,9 +20,9 @@ jobs:
       fail-fast: false
       matrix:
         config:
-          - {os: "windows-latest", cxx: "msvc", cc: "msvc", preset: "msvc"}
+          - {os: "windows-2025", cxx: "msvc", cc: "msvc", preset: "msvc"}
           - {os: "ubuntu-24.04", cxx: "g++-14", cc: "gcc-14", preset: "gcc"}
-          - {os: "macos-latest", cxx: "clang++", cc: "clang", preset: "apple"}
+          - {os: "macos-15", cxx: "clang++", cc: "clang", preset: "apple"}
     steps:
       - name: Chekout
         uses: actions/checkout@v4
