[brief] More tweaks to the CI config.
[detailed]
- Remove the need to explicitly set the CMAKE_BUILD_TYPE since we can
  now set it at build time.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -83,16 +83,11 @@ jobs:
           CC: ${{ matrix.config.cc }}
           CXX: ${{ matrix.config.cxx }}
         run: |
-          cmake --preset=$CONFIG_TYPE -DCMAKE_BUILD_TYPE=$BUILD_TYPE -DBUILD_SHARED_LIBS=OFF -DCMAKE_PREFIX_PATH=~/deps
-          if [[ "$OSTYPE" == "msys" ]]; then
-            cmake --build build --config $BUILD_TYPE
-          else
-            cmake --build build --parallel
-          fi
+          cmake --preset=$CONFIG_TYPE -DBUILD_SHARED_LIBS=OFF -DCMAKE_PREFIX_PATH=~/deps
+          cmake --build build --config $BUILD_TYPE
 
       - name: Run tests
         shell: bash
-        working-directory: ./build
         env:
           BUILD_TYPE: ${{ matrix.build }}
           CONFIG_TYPE: ${{ matrix.config.preset }}
@@ -100,7 +95,7 @@ jobs:
           CXX: ${{ matrix.config.cxx }}
         run: |
           if [[ "$OSTYPE" == "msys" ]]; then
-            cmake --build . --target RUN_TESTS --config $BUILD_TYPE
+            cmake --build build --target RUN_TESTS --config $BUILD_TYPE
           else
-            make test
+            cmake --build build --target test --config $BUILD_TYPE
           fi
