[brief] Adds linspace.
[detailed]
- Follows the API from numpy.

--- a/include/zeus/CMakeLists.txt
+++ b/include/zeus/CMakeLists.txt
@@ -23,6 +23,7 @@ set(ZEUS_INCLUDE_LIST
     ${INCLUDE_ROOT}/string.hpp
     ${INCLUDE_ROOT}/range.hpp
     ${INCLUDE_ROOT}/container_traits.hpp
+    ${INCLUDE_ROOT}/linspace.hpp
     )
 
 source_group("include" FILES)
